[gd_scene load_steps=5 format=3 uid="uid://bdksl8u0q4sv0"]

[ext_resource type="Script" uid="uid://bmi7xjsknp6o3" path="res://gear/ItemSlot.gd" id="1_2w6r6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcynw"]
bg_color = Color(0.637795, 0.587889, 0.575893, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w6r6"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_2w6r6"]
HBoxContainer/constants/separation = 4
Panel/styles/panel = SubResource("StyleBoxFlat_tcynw")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_2w6r6")

[node name="ItemSlot" type="PanelContainer"]
offset_right = 33.0
offset_bottom = 23.0
theme = SubResource("Theme_2w6r6")
script = ExtResource("1_2w6r6")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="Container"]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
